<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading library by BumpTech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe">Retrofit - Type-Safe HTTP client for Android and Java by Square Inc.</string>
    <string name="content_descp_download">Image showing an download icon</string>
    <string name="loading_text">We are loading</string>
    <string name="download">Download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">Ok</string>
</resources>
