<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/img_download"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_descp_download"
        app:layout_constraintBottom_toTopOf="@id/group_resource"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="5"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/descarga" />

    <RadioGroup
        android:id="@+id/group_resource"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/img_download"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="4">

        <RadioButton
            android:id="@+id/radio_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_image_loading_library_by_bumptech"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:id="@+id/radio_loadApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadapp_current_repository_by_udacity"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_type_safe"
            android:onClick="onRadioButtonClicked"
            />

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_resource"
        app:layout_constraintVertical_weight="1"
        app:backgroundColor="@color/default_background_loading"
        app:textColor="@color/default_textcolor_loading"
        app:circleColor="@color/default_circlecolor_loading"
        app:animationColor="@color/colorPrimary"
        />

</androidx.constraintlayout.widget.ConstraintLayout>